# power-desk

./: .gitignore  .markdownlint.json  Cargo.toml  README_WIFI_CONFIG.md  VERIFICATION_REPORT.md  build.rs  lefthook.yml  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-firmware.yml  rust_ci.yml
docs/: development-setup.md  protection-system.md  protection-system.zh.md
shell/: PowerDeskShell-FrontBaffle.stl
src/: bus.rs  charge_channel.rs  config.rs  error.rs  i2c_mux.rs  main.rs  mqtt.rs  protector.rs  temperature.rs  watchdog.rs  wifi.rs
tools/: analyze_firmware.py  batch_config.sh  config_tool.py  setup-dev-tools.sh  test_workflow.sh  ultimate-fix.sh
web-config-tool/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER.md  Dockerfile  README-GITHUB-TOKEN.md  README.md  USAGE.md  config-tool.js  create-test-firmware.py  docker-build.sh  docker-compose.yml  docker-run.sh  index-zh.html  index.html  package.json  power-desk-server.js  server.js  start-server.sh  vite.config.js
web-config-tool/src/: lang-switch.js  main.js  style.css
